# gomoku-glm5

./: .gitignore  README.md  main.py  plan.md  prompt.md  pyproject.toml  pytest.ini
.github/workflows/: release.yml
assets/fonts/: README.md
assets/images/: README.md
assets/sounds/: README.md
gomoku/: __init__.py  ai.py  board.py  constants.py  game.py  logger.py  player.py  record.py  sound.py  timer.py  ui.py
tests/: test_game.py
